0.2.3:

* segway: new --tracks-from option allows specification of a filename
* segway-layer: fix bug where not all segment labels were in an input file
* segway: fix bug where --split-sequences was ignored
* segway: use Genomedata-reported metadata for whole genome rather
  than accumulating by chromosome
* prereqs: optbuild must now be >= 0.1.10

0.2.2:

* increase task wrapper robustness
* bug fixes
* docs fixes
* setup.py changes

0.2.1:

* docs: fix errors
* add sge_setup.py
* installation: add explicit PyTables installer

0.2.0:

* segway: add hierarchical segmentation
* segway: fix bug where only one random start is allowed
* segway: change "chunk" to "window" to avoid confusion with GMTK usage of chunk
* segway: updated system check to consider GE* _and SGE*_ systems as SGE.
* segway: removed dependence upon genomedata._util
* everything: anything that supported gzipped I/O now may support "-" to mean stdin/stdout
* segway-layer: now supports no arguments, which means use stdin/stdout
* segway-layer: now supports input files with no track line
* segway-layer: now supports non-integer segment labels
* GMTK-installation: fixed default shell to be /bin/bash as 'declare' call in
  installation script caused GMTK installation to fail.
* installation: move from path.py to forked-path

0.1.21:

* segway: add --segtransition-weight-scale

0.1.20:

* segway: limits the number of jobs dumped into the queuing system at
  once to avoid overloading it
* segway: increase robustness by adding a ulimit wrapper script to
  explicitly limit the memory used for each job and erase temporary files
* segway: add --old-directory option for identify mode recovery of a
  previous partial run
* segway-task: bugfix: won't throw a nested exception when temporary
  files were not created

0.1.19:

* segway: now set CARD_FRAMEINDEX dynamically to allow for
  --split-sequences to change between train and identify
* segway: --num-segs now called --num-labels